k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: algebra-backend
  namespace: algebra
  labels:
    app: algebra-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: algebra-backend
  template:
    metadata:
      labels:
        app: algebra-backend
    spec:
      serviceAccountName: scribe-algebra
      containers:
        - name: algebra-backend
          image: >-
              europe-west3-docker.pkg.dev/scribe-exchange/scribe-algebra/scribe-algebra-backend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          command:
            - gunicorn
            - -c
            - gunicorn.py
            - backend.asgi:application
            - -k
            - uvicorn.workers.UvicornWorker
            - '--timeout'
            - '600'
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "300m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      imagePullSecrets:
        - name: artifact-registry
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
