k8s/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: algebra-celery-beat
  namespace: algebra
  labels:
    app: algebra-celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: algebra-celery-beat
  template:
    metadata:
      labels:
        app: algebra-celery-beat
    spec:
      serviceAccountName: kim-algebra
      containers:
        - name: algebra-celery-beat
          image: >-
              europe-west3-docker.pkg.dev/kim-testnet/kim-algebra/kim-algebra-bakend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          command:
            - celery
            - --app
            - backend
            - beat
            - --loglevel=DEBUG
            - -S
            - django
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      imagePullSecrets:
        - name: artifact-registry
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
